force-app/main/default/objects/TimeSheets__x/TimeSheets__x.object-meta.xml
<CustomObject>
    <description>TimeSheets</description>
    <externalDataSource>Workday</externalDataSource>
    <externalName>TimeSheets</externalName>
    <label>TimeSheets</label>
    <pluralLabel>TimeSheets</pluralLabel>
</CustomObject>