force-app/main/default/objects/TimeSheets__x/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments</description>
    <externalDeveloperName>Comments</externalDeveloperName>
    <label>Comments</label>
    <length>128</length>
    <type>Text</type>
</CustomField>