force-app/main/default/objects/TimeSheets__x/fields/In__c.field-meta.xml
<CustomField>
    <fullName>In__c</fullName>
    <description>In</description>
    <externalDeveloperName>In</externalDeveloperName>
    <label>In</label>
    <type>DateTime</type>
</CustomField>