force-app/main/default/objects/TimeSheets__x/fields/Out__c.field-meta.xml
<CustomField>
    <fullName>Out__c</fullName>
    <description>Out</description>
    <externalDeveloperName>Out</externalDeveloperName>
    <label>Out</label>
    <type>DateTime</type>
</CustomField>