force-app/main/default/objects/TimeSheets__x/fields/Out_reason__c.field-meta.xml
<CustomField>
    <fullName>Out_reason__c</fullName>
    <description>Out_reason</description>
    <externalDeveloperName>Out_reason</externalDeveloperName>
    <label>Out_reason</label>
    <length>128</length>
    <type>Text</type>
</CustomField>