force-app/main/default/objects/TimeSheets__x/fields/Time_sheet_type__c.field-meta.xml
<CustomField>
    <fullName>Time_sheet_type__c</fullName>
    <description>Time_sheet_type</description>
    <externalDeveloperName>Time_sheet_type</externalDeveloperName>
    <label>Time_sheet_type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>