force-app/main/default/objects/TimeSheets__x/fields/Waived_meal_break__c.field-meta.xml
<CustomField>
    <fullName>Waived_meal_break__c</fullName>
    <description>Waived_meal_break</description>
    <externalDeveloperName>Waived_meal_break</externalDeveloperName>
    <label>Waived_meal_break</label>
    <length>128</length>
    <type>Text</type>
</CustomField>